--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 inventory = ansible.host
 host_key_checking = false
+remote_user = vagrant
 deprecation_warnings = false
 timeout = 60
-vault_password_file= files/secrets/vault.key
+private_key_file= files/secrets/ssh.key
